# tantivy

./: Cargo.toml
bitpacker/: Cargo.toml
columnar/: Cargo.toml
columnar/src/: dynamic_column.rs  value.rs
columnar/src/columnar/reader/: mod.rs
columnar/src/columnar/writer/: mod.rs
common/: Cargo.toml
common/src/: file_slice.rs  lib.rs  vint.rs
fastfield_codecs/: Cargo.toml
ownedbytes/: Cargo.toml
query-grammar/: Cargo.toml
query-grammar/src/: infallible.rs
src/: docset.rs  error.rs  lib.rs
src/aggregation/: agg_limits.rs  mod.rs  segment_agg_result.rs
src/aggregation/bucket/: mod.rs  term_agg.rs
src/aggregation/bucket/histogram/: date_histogram.rs
src/aggregation/metric/: top_hits.rs
src/collector/: custom_score_top_collector.rs  facet_collector.rs  mod.rs  multi_collector.rs  top_score_collector.rs  tweak_score_top_collector.rs
src/core/: searcher.rs  tests.rs
src/directory/: composite_file.rs  directory.rs  footer.rs  managed_directory.rs  mmap_directory.rs  ram_directory.rs
src/fastfield/: mod.rs  readers.rs
src/fieldnorm/: reader.rs
src/index/: index.rs  index_meta.rs  inverted_index_reader.rs  mod.rs  segment.rs  segment_reader.rs
src/indexer/: delete_queue.rs  index_writer.rs  log_merge_policy.rs  merge_operation.rs  merger.rs  operation.rs  segment_register.rs  segment_serializer.rs  segment_updater.rs  segment_writer.rs  single_segment_index_writer.rs
src/postings/: block_segment_postings.rs  loaded_postings.rs  mod.rs  segment_postings.rs  serializer.rs
src/query/: all_query.rs  automaton_weight.rs  bm25.rs  boost_query.rs  const_score_query.rs  disjunction.rs  disjunction_max_query.rs  empty_query.rs  exist_query.rs  fuzzy_query.rs  query.rs  regex_query.rs  set_query.rs  vec_docset.rs  weight.rs
src/query/boolean_query/: boolean_query.rs  boolean_weight.rs
src/query/more_like_this/: query.rs
src/query/phrase_prefix_query/: phrase_prefix_query.rs  phrase_prefix_scorer.rs
src/query/phrase_query/: phrase_query.rs  phrase_scorer.rs  phrase_weight.rs  regex_phrase_query.rs
src/query/query_parser/: query_parser.rs
src/query/range_query/: fast_field_range_doc_set.rs  range_query.rs  range_query_fastfield.rs
src/query/term_query/: term_query.rs  term_scorer.rs  term_weight.rs
src/query/union/: bitset_union.rs  buffered_union.rs  simple_union.rs
src/reader/: mod.rs
src/schema/: document.rs  field_value.rs
src/schema/document/: se.rs
src/snippet/: mod.rs
src/store/: compressors.rs  footer.rs  mod.rs  reader.rs  store_compressor.rs  writer.rs
src/store/index/: mod.rs  skip_index.rs
src/termdict/: mod.rs  tests.rs
src/termdict/fst_termdict/: streamer.rs  term_info_store.rs  termdict.rs
src/termdict/sstable_termdict/: mod.rs
src/tokenizer/: ngram_tokenizer.rs
sstable/: Cargo.toml
sstable/src/: delta.rs  dictionary.rs  lib.rs  sstable_index_v3.rs  streamer.rs
stacker/: Cargo.toml
tokenizer-api/: Cargo.toml
