[package]
name = "izihawa-tantivy-sstable"
version = "0.25.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/quickwit-oss/tantivy"
repository = "https://github.com/quickwit-oss/tantivy"
keywords = ["search", "information", "retrieval", "sstable"]
categories = ["database-implementations", "data-structures", "compression"]
description = "sstables for tantivy"

[dependencies]
common = {version= "0.25.0", path="../common", package="izihawa-tantivy-common"}
futures-util = "0.3.30"
itertools = "0.14.0"
tantivy-bitpacker = { version= "0.25.0", path="../bitpacker", package = "izihawa-tantivy-bitpacker" }
tantivy-fst = "0.5"
# experimental gives us access to Decompressor::upper_bound
zstd = { version = "0.13", default-features = false, features = ["experimental"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", default-features = false }
names = "0.14"
rand = "0.8"

[[bench]]
name = "stream_bench"
harness = false

[[bench]]
name = "ord_to_term"
harness = false

